Fixed the css issue for side bar menus overlapping in footer. Changed the functionality to should not receive the notification without login.

--- a/css/style.css
+++ b/css/style.css
@@ -747,3 +747,6 @@ audio:not([controls]) {
         padding-top: 0;
     }
 }
+.scroll-content{
+    margin-bottom:47px;
+}
